--- a/LC/Views/Home/Index.cshtml
+++ b/LC/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
             {        
                 <tr>
                     <td>@link.Id</td>
-                    <td><a href="@link.Full">Ссилка</a></td>
+                    <td>@link.Full"></td>
                     <td>@link.DateOfCreating</td>
                     <td>@link.NumberOfTransitions</td>
                 </tr>
